# appInstalleR

./: Cargo.toml  README.md
src/: desktop_file_template.rs  main.rs
